==> arduino/mkrwan1300-fw/Projects/Multi/Applications/LoRa/AT_Slave/src/hw_rtc.c <==
#include "hw.h"
#include "low_power.h"
#include "timeServer.h"
#define MIN_ALARM_DELAY               3 /* in ticks */
#define N_PREDIV_S                 10
#define PREDIV_S                  ((1 << N_PREDIV_S) - 1)
#define PREDIV_A                  ((1 << (15 - N_PREDIV_S)) - 1)
#define HW_RTC_ALARMSUBSECONDMASK_SS14_10     ((uint32_t) (RTC_ALRMASSR_MASKSS_1 | RTC_ALRMASSR_MASKSS_3))
#define HW_RTC_ALARMSUBSECONDMASK HW_RTC_ALARMSUBSECONDMASK_SS14_10
#define USEC_NUMBER               1000000
#define MSEC_NUMBER               (USEC_NUMBER / 1000)
#define RTC_ALARM_TIME_BASE       (USEC_NUMBER >> N_PREDIV_S)
#define COMMON_FACTOR        3
#define CONV_NUMER                (MSEC_NUMBER >> COMMON_FACTOR)
#define CONV_DENOM                (1 << (N_PREDIV_S - COMMON_FACTOR))
#define HW_RTC_EXTI_LINE_ALARM_EVENT LL_EXTI_LINE_17
#define CALENDAR_VALUE(subsec, sec, min, hours, days)  \
  ((((sec) + 60 * ((min) + 60 * ((hours) + 24 * (days)))) << N_PREDIV_S) + (PREDIV_S - (subsec)))
#define ADJUST_TIME(_x_, _y_, _t_) \
  while ((_x_) >= (_t_)) { \
    (_x_) -= (_t_); \
    (_y_)++; \
  }

void HW_RTC_setMcuWakeUpTime(void)
{
  HW_RTC_TimeTypeDef RTC_TimeStruct;
  HW_RTC_DateTypeDef RTC_DateStruct;

  uint16_t rtcAlarmSubSeconds;
  uint16_t rtcAlarmSeconds;
  uint16_t rtcAlarmMinutes;
  uint16_t rtcAlarmHours;
  uint16_t rtcAlarmDays;

  TimerTime_t now, hit;
  int16_t McuWakeUpTime;

  if ((McuWakeUpTimeInitialized == RESET) &&
      (NVIC_GetPendingIRQ(RTC_Alarm_IRQn) == 1))
  { /* warning: works ok if now is below 30 days
       it is ok since it's done once at first alarm wake-up*/
    McuWakeUpTimeInitialized = SET;
    now = HW_RTC_GetCalendarValue(&RTC_DateStruct, &RTC_TimeStruct);

    DBG_GPIO_SET(GPIOB, GPIO_PIN_13);
    DBG_GPIO_RST(GPIOB, GPIO_PIN_13);

    rtcAlarmSubSeconds = LL_RTC_ALMA_GetSubSecond(RTC);
    rtcAlarmHours = HW_RTC_Bcd2ToByte(LL_RTC_ALMA_GetHour(RTC));
    rtcAlarmMinutes = HW_RTC_Bcd2ToByte(LL_RTC_ALMA_GetMinute(RTC));
    rtcAlarmSeconds = HW_RTC_Bcd2ToByte(LL_RTC_ALMA_GetSecond(RTC));
    rtcAlarmDays = LL_RTC_ALMA_GetDay(RTC);

    hit = CALENDAR_VALUE(rtcAlarmSubSeconds, rtcAlarmSeconds, rtcAlarmMinutes, rtcAlarmHours, rtcAlarmDays);

    McuWakeUpTime = (int16_t) ((now - hit));
    McuWakeUpTimeCal += McuWakeUpTime;
    DBG_PRINTF("Cal=%d, %d\n", McuWakeUpTimeCal, McuWakeUpTime);
  }
}

void HW_RTC_SetAlarm(uint32_t timeout)
{
  /* we don't go in Low Power mode for timeout below MIN_ALARM_DELAY */
  if ((MIN_ALARM_DELAY + McuWakeUpTimeCal) < ((timeout - HW_RTC_GetTimerElapsedTime())))
  {
    LowPower_Enable(e_LOW_POWER_RTC);
  }
  else
  {
    LowPower_Disable(e_LOW_POWER_RTC);
  }

  if (LowPower_GetState() == 0)
  {
    LowPower_Enable(e_LOW_POWER_RTC);
    timeout = timeout -  McuWakeUpTimeCal;
  }

  HW_RTC_StartWakeUpAlarm(timeout);
}

uint32_t HW_RTC_GetTimerElapsedTime(void)
{
  HW_RTC_TimeTypeDef RTC_TimeStruct;
  HW_RTC_DateTypeDef RTC_DateStruct;

  TimerTime_t CalendarValue = HW_RTC_GetCalendarValue(&RTC_DateStruct, &RTC_TimeStruct);

  return(( uint32_t )(CalendarValue - RtcTimerContext.Rtc_Time));
}

uint32_t HW_RTC_GetTimerValue(void)
{
  HW_RTC_TimeTypeDef RTC_TimeStruct;
  HW_RTC_DateTypeDef RTC_DateStruct;

  uint32_t CalendarValue = (uint32_t) HW_RTC_GetCalendarValue(&RTC_DateStruct, &RTC_TimeStruct);

  return(CalendarValue);
}

void HW_RTC_StopAlarm(void)
{
  /* Clear RTC Alarm Flag */
  LL_RTC_ClearFlag_ALRA(RTC);

  /* Disable the Alarm A interrupt */
  HW_RTC_DeactivateAlarm();
}

static void HW_RTC_SetConfig(void)
{
  /*
   * clock initialization
   * - Enable LSE Oscillator
   * - Select LSI as RTC clock source
   * - Enable RTC Clock
   * - Configure the NVIC for RTC Alarm
   */
  HW_RCC_OscConfig();
  HW_RCCEx_PeriphCLKConfig();
  LL_RCC_EnableRTC();
  NVIC_SetPriority(RTC_Alarm_IRQn, 0x0);
  NVIC_EnableIRQ(RTC_Alarm_IRQn);

  /* Disable write protection so that RTC can be initialized */
  LL_RTC_DisableWriteProtection(RTC);

  /* Enter init mode */
  LL_RTC_EnterInitMode(RTC);

  /* Clear RTC_CR FMT, OSEL and POL Bits */
  LL_RTC_SetHourFormat(RTC, LL_RTC_HOURFORMAT_24HOUR);
  LL_RTC_SetAlarmOutEvent(RTC, RTC_OUTPUT); /* RTC_OUTPUT is defined to LL_RTC_ALARMOUT_xxx */
  LL_RTC_SetOutputPolarity(RTC, LL_RTC_OUTPUTPOLARITY_PIN_HIGH);

  /* Configure the RTC PRER */
  LL_RTC_SetSynchPrescaler(RTC, PREDIV_S);
  LL_RTC_SetAsynchPrescaler(RTC, PREDIV_A);

  /* Exit Initialization mode */
  LL_RTC_DisableInitMode(RTC);

  LL_RTC_DisableOutRemap(RTC);
  LL_RTC_SetAlarmOutputType(RTC, LL_RTC_ALARM_OUTPUTTYPE_OPENDRAIN);

  /* Enter init mode */
  LL_RTC_EnterInitMode(RTC);

  /* Friday 1st January 2000, at 0:0:0 */
  LL_RTC_DATE_Config(RTC, LL_RTC_WEEKDAY_SATURDAY, __LL_RTC_CONVERT_BIN2BCD(1),
                     __LL_RTC_CONVERT_BIN2BCD(1), __LL_RTC_CONVERT_BIN2BCD(0));
  LL_RTC_TIME_Config(RTC, LL_RTC_TIME_FORMAT_AM_OR_24, 0, 0, 0);

  /* Exit init mode */
  LL_RTC_DisableInitMode(RTC);

  /* If  RTC_CR_BYPSHAD bit = 0, wait for synchro else this check is not needed */
  if (LL_RTC_IsShadowRegBypassEnabled(RTC) == 0U)
  {
    LL_RTC_WaitForSynchro(RTC);
  }

  /* Enable Direct Read of the calendar registers (not through Shadow) */
  LL_RTC_EnableShadowRegBypass(RTC);

  /* Enable write protection so that ISR cannot be modified */
  LL_RTC_EnableWriteProtection(RTC);
}

static void HW_RTC_StartWakeUpAlarm(uint32_t timeoutValue)
{
  uint16_t rtcAlarmSubSeconds;
  uint16_t rtcAlarmSeconds;
  uint16_t rtcAlarmMinutes;
  uint16_t rtcAlarmHours;
  uint16_t rtcAlarmDays;
  uint8_t day_in_month;
  HW_RTC_TimeTypeDef RTC_TimeStruct = RtcTimerContext.RTC_Calndr_Time;
  HW_RTC_DateTypeDef RTC_DateStruct = RtcTimerContext.RTC_Calndr_Date;

  HW_RTC_StopAlarm();
  DBG_GPIO_SET(GPIOB, GPIO_PIN_13);

  /*reverse counter */
  rtcAlarmSubSeconds =  PREDIV_S - RTC_TimeStruct.SubSeconds;
  rtcAlarmSubSeconds += (timeoutValue & PREDIV_S);
  /* convert timeout  to seconds */
  timeoutValue >>= N_PREDIV_S;  /* convert timeout  in seconds */

  /*convert microsecs to RTC format and add to 'Now' */
  rtcAlarmDays =  RTC_DateStruct.Day;
  ADJUST_TIME(timeoutValue, rtcAlarmDays, SecondsInDay);

  /* calc hours */
  rtcAlarmHours = RTC_TimeStruct.Hours;
  ADJUST_TIME(timeoutValue, rtcAlarmHours, SecondsInHour);

  /* calc minutes */
  rtcAlarmMinutes = RTC_TimeStruct.Minutes;
  ADJUST_TIME(timeoutValue, rtcAlarmMinutes, SecondsInMinute);

  /* calc seconds */
  rtcAlarmSeconds =  RTC_TimeStruct.Seconds + timeoutValue;

  /***** correct for modulo********/
  ADJUST_TIME(rtcAlarmSubSeconds, rtcAlarmSeconds, (PREDIV_S + 1));
  ADJUST_TIME(rtcAlarmSeconds, rtcAlarmMinutes, SecondsInMinute);
  ADJUST_TIME(rtcAlarmMinutes, rtcAlarmHours, MinutesInHour);
  ADJUST_TIME(rtcAlarmHours, rtcAlarmDays, HoursInDay);

  /* Day in month, adjusted to take into account leap years */
  day_in_month = DaysInMonth[RTC_DateStruct.Month - 1];
  if (((RTC_DateStruct.Year % 4) == 0) && (RTC_DateStruct.Month == 2))
  {
    day_in_month++;
  }

  while (rtcAlarmDays > day_in_month)
  {
    rtcAlarmDays = (rtcAlarmDays - day_in_month);
  }

  /* Set RTC_AlarmStructure with calculated values*/
  /* Code from HAL_RTC_SetAlarm_IT / LL_RTC_ALMA_Init */
  LL_RTC_DisableWriteProtection(RTC);

  /* Disable the Alarm A interrupt */
  LL_RTC_ALMA_Disable(RTC);
  LL_RTC_ClearFlag_ALRA(RTC);
  /* Wait till RTC ALRxWF flag is set */
  while (!LL_RTC_IsActiveFlag_ALRAW(RTC))
  {
    ;
  }

  LL_RTC_ALMA_SetSubSecond(RTC, PREDIV_S - rtcAlarmSubSeconds);
  LL_RTC_ALMA_SetSubSecondMask(RTC, ((HW_RTC_ALARMSUBSECONDMASK) >> (RTC_POSITION_ALMA_MASKSS)));
  LL_RTC_ALMA_ConfigTime(RTC, RTC_TimeStruct.TimeFormat,
                         HW_RTC_ByteToBcd2(rtcAlarmHours),
                         HW_RTC_ByteToBcd2(rtcAlarmMinutes),
                         HW_RTC_ByteToBcd2(rtcAlarmSeconds));
  LL_RTC_ALMA_DisableWeekday(RTC);
  LL_RTC_ALMA_SetDay(RTC, HW_RTC_ByteToBcd2(rtcAlarmDays));
  LL_RTC_ALMA_SetMask(RTC, LL_RTC_ALMA_MASK_NONE);
  LL_RTC_TIME_DisableDayLightStore(RTC);

  /* Configure the Alarm state: Enable Alarm */
  LL_RTC_ALMA_Enable(RTC);

  /* Configure the Alarm interrupt */
  LL_RTC_EnableIT_ALRA(RTC);

  /* RTC Alarm Interrupt Configuration: EXTI configuration */
  LL_EXTI_EnableIT_0_31(HW_RTC_EXTI_LINE_ALARM_EVENT);
  LL_EXTI_EnableRisingTrig_0_31(HW_RTC_EXTI_LINE_ALARM_EVENT);

  /* Enable the write protection for RTC registers */
  LL_RTC_EnableWriteProtection(RTC);

  /* Debug Printf*/
  DBG(HW_RTC_GetCalendarValue(&RTC_DateStruct, &RTC_TimeStruct); );
  DBG_PRINTF("it's %d:%d:%d:%d ", RTC_TimeStruct.Hours, RTC_TimeStruct.Minutes, RTC_TimeStruct.Seconds, ((PREDIV_S - RTC_TimeStruct.SubSeconds) * 1000) >> N_PREDIV_S);
  DBG_PRINTF("WU@ %d:%d:%d:%d\n", rtcAlarmHours, rtcAlarmMinutes, rtcAlarmSeconds, (rtcAlarmSubSeconds * 1000) >> N_PREDIV_S);

  DBG_GPIO_RST(GPIOB, GPIO_PIN_13);
}

static TimerTime_t HW_RTC_GetCalendarValue(HW_RTC_DateTypeDef *RTC_DateStruct, HW_RTC_TimeTypeDef *RTC_TimeStruct)
{
  TimerTime_t calendarValue;
  TimerTime_t nb_days;
  uint32_t i;
  uint32_t ssr;
  uint32_t tr;
  uint32_t dr;
  
  /*
   * as shadow registers are not used, we must read RTC->SSR, TR and DR registers
   * and ensure they have not changed between 2 reads to ensure time and date are coherent
   * Then we must use these values directly instead of readnig them again and again
   * with LL_RTC_TIME_Getxxx() functions
   */
  do
  {
    ssr = RTC->SSR;
    tr = RTC->TR;
    dr = RTC->DR;
  } while (ssr != RTC->SSR);

  /* RTC_TimeStruct->SubSeconds = LL_RTC_TIME_GetSubSecond(RTC); */
  RTC_TimeStruct->SubSeconds = READ_BIT(ssr, RTC_SSR_SS);

  /* RTC_TimeStruct->Hours = HW_RTC_Bcd2ToByte(LL_RTC_TIME_GetHour(RTC)); */
  RTC_TimeStruct->Hours = HW_RTC_Bcd2ToByte((uint8_t)((tr & (RTC_TR_HT | RTC_TR_HU)) >> 16U));

  /* RTC_TimeStruct->Minutes = HW_RTC_Bcd2ToByte(LL_RTC_TIME_GetMinute(RTC)); */
  RTC_TimeStruct->Minutes = HW_RTC_Bcd2ToByte((uint8_t)((tr & (RTC_TR_MNT | RTC_TR_MNU)) >>8U));

  /* RTC_TimeStruct->Seconds = HW_RTC_Bcd2ToByte(LL_RTC_TIME_GetSecond(RTC)); */
  RTC_TimeStruct->Seconds = HW_RTC_Bcd2ToByte((uint8_t)(tr & (RTC_TR_ST | RTC_TR_SU)));

  /* RTC_TimeStruct->TimeFormat = LL_RTC_TIME_GetFormat(RTC); */
  RTC_TimeStruct->TimeFormat = READ_BIT(tr, RTC_TR_PM);

  /* RTC_DateStruct->WeekDay = LL_RTC_DATE_GetWeekDay(RTC); */
  RTC_DateStruct->WeekDay = (uint32_t)(READ_BIT(dr, RTC_DR_WDU) >> RTC_POSITION_DR_WDU);

  /* RTC_DateStruct->Month = HW_RTC_Bcd2ToByte(LL_RTC_DATE_GetMonth(RTC)); */
  RTC_DateStruct->Month = HW_RTC_Bcd2ToByte((uint8_t)((dr & (RTC_DR_MT | RTC_DR_MU)) >> 8U));

  /* RTC_DateStruct->Day = HW_RTC_Bcd2ToByte(LL_RTC_DATE_GetDay(RTC)); */
  RTC_DateStruct->Day = HW_RTC_Bcd2ToByte((uint8_t)(dr & (RTC_DR_DT | RTC_DR_DU)));

  /* RTC_DateStruct->Year = HW_RTC_Bcd2ToByte(LL_RTC_DATE_GetYear(RTC)); */
  RTC_DateStruct->Year = HW_RTC_Bcd2ToByte((uint8_t)((dr & (RTC_DR_YT | RTC_DR_YU)) >> 16U));

  /* years (calc valid up to year 2099)*/
  nb_days = RTC_DateStruct->Year * DaysInYear;
  nb_days += (RTC_DateStruct->Year + 3) / 4;    /* we add 1 day for full-year 00 (which is 2000), 1 day for full-year 2004,...) */
  /* Day in month, adjusted to take into account leap years */
  for (i = 0; i < (RTC_DateStruct->Month - 1); i++)
  {
    nb_days += DaysInMonth[i];
  }
  if (((RTC_DateStruct->Year % 4) == 0) && (RTC_DateStruct->Month >= 3))
  {
    nb_days++;
  }

  /* days */
  nb_days += (RTC_DateStruct->Day - 1);

  calendarValue = CALENDAR_VALUE(RTC_TimeStruct->SubSeconds, RTC_TimeStruct->Seconds,
                                 RTC_TimeStruct->Minutes, RTC_TimeStruct->Hours, nb_days);

  return(calendarValue);
}
